[package]
name = "tweet_backend"
version = "0.1.0"
authors = ["hsedjame <sedhjodev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["attributes", "unstable"] }
tide = "0.15.0"
dotenv = "0.15.0"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid"] }
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = "0.8.1"
thiserror = "1.0.22"
